Days/day-11/ingress-3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-3
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: giropops-senhas
              port:
                number: 5000
